--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Internet per il bene pubblico</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <!-- header con logo-->
+    <header>
+        <div>
+            <img src="img/logo.svg" alt="Logo booleaner" class="logo">
+        </div>
+    </header>
+    <!-- /header con logo-->
+
+    <main>
+      
+    </main>
+
 </body>
+
 </html>
