--- a/index.html
+++ b/index.html
@@ -18,7 +18,91 @@
     <!-- /header con logo-->
 
     <main>
-      
+        <!--titolo e foto documento-->
+        <section class="titolo-foto">
+            <h1>Internet deve essere al servizio del "bene pubblico" : il manifesto di Tim Barners-Lee</h1>
+            <div class="autore">
+                <p>Scritto da <span id="booleaner">The booleaner</span></p>
+                <p>Il 10/10/2020</p>
+            </div>
+            <div class="immagini-lee">
+                <img src="img/tim-1.jpg" alt="Foto 1 di Tim Barners-Lee">
+                <img src="img/tim-2.jpg" alt="Foto 2 di Tim Barners-Lee">
+            </div>
+            <p>First photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+            <p>2nd. photo: Wikimedia by Paul Clarke</p>
+        </section>
+        <!--/titolo e foto documento-->
+        <!-- descrizione articolo-->
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex minima nisi commodi deserunt
+                rerum atque, ipsa quis dolorum magni voluptate soluta facilis nemo rem reiciendis dolor
+                iure omnis eius laudantium. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                <span class="lorem">Saepe, totam ut. Sit exercitationem voluptates ex nam!</span> Esse ad vitae
+                odio quam possimus incidunt perspiciatis quos! Temporibus voluptas blanditiis dicta ipsum!
+            </p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, molestiae quod veniam provident
+                    totam et deserunt ratione doloribus, excepturi veritatis magni ad! Beatae obcaecati repellat
+                    inventore omnis autem dignissimos rerum!</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente animi vel explicabo nostrum quam
+                    assumenda libero non. Consectetur sit placeat qui illo repellendus esse, necessitatibus itaque
+                    repudiandae cumque a? Hic.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, laborum. Ut nulla ducimus, a
+                    deserunt distinctio, magnam tenetur ratione maiores doloremque iusto alias eum temporibus non itaque
+                    accusantium rerum cumque.</li>
+            </ul>
+        </section>
+        <!-- /descrizione articolo-->
+        <!-- tabella-->
+        <section>
+            <table>
+                <thead>
+                    <th class="prima-colonna">Lorem ipsum dolor</th>
+                    <th class="seconda-colonna">Lorem ipsum dolor</th>
+                    <th class="terza-colonna">Lorem ipsum dolor</th>
+                </thead>
+                <tbody>
+                    <tr class="prima-riga">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero a veniam tenetur iure rem
+                            totam, voluptates quas ducimus perspiciatis eum numquam. Totam quisquam accusamus ab debitis
+                            nihil, repellat cupiditate enim?</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero a veniam tenetur iure rem
+                            totam, voluptates quas ducimus perspiciatis eum numquam. Totam quisquam accusamus ab debitis
+                            nihil, repellat cupiditate enim?</td>
+                    </tr>
+                    <tr class="terza-riga">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero a veniam tenetur iure rem
+                            totam, voluptates quas ducimus perspiciatis eum numquam. Totam quisquam accusamus ab debitis
+                            nihil, repellat cupiditate enim?</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <!-- tabella-->
+        <!-- fine articolo-->
+        <section>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod non officiis id omnis impedit enim
+                asperiores rem?
+                Eum itaque pariatur nobis. Id obcaecati facilis dolorum distinctio, veritatis officiis libero. Optio!
+                Lorem ipsum,
+                <span class="lorem">dolor sit amet consectetur adipisicing elit.</span> Cupiditate voluptatibus
+                excepturi ratione numquam repellat facere possimus quas sed, magnam officia libero porro! Repellat nam
+                hic porro est aspernatur? Dolor, adipisci?
+            </p>
+        </section>
+        <!-- /fine articolo-->
+
+
+
     </main>
 
 </body>
