--- a/index.html
+++ b/index.html
@@ -100,10 +100,21 @@
             </p>
         </section>
         <!-- /fine articolo-->
+        <!-- footer con articoli correlati-->
 
 
 
     </main>
+    <footer>
+        <p class="correlati">Potrebbero interessarti</p>
+        <div class="img-monitor">
+            <span>Lorem ipsum dolor</span>
+        </div>
+        <div class="img-graph">
+            <span>Lorem ipsum dolor</span>
+        </div>        
+    </footer>
+    <!-- /footer con articoli correlati-->
 
 </body>
 
